# cpp_videogame

./: CMakeLists.txt
inc/: Game.h  GameObject.h  GameState.h  Player.h  UI.h
src/: Game.cpp  GameObject.cpp  Player.cpp  UI.cpp  main.cpp
